<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDistance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="OrigenDistanceLayout">Origen: </string>
    <string name="DestinoDistanceLayout">Destino: </string>
    <string name="ModViaje">Modo de viaje: </string>
    <string name="TiempTrayect">Tiempo de trayecto: </string>
    <string name="DistanciaKm">Distancia:</string>
    <string name="title_activity_respuesta">Resultado de busqueda</string>
    <string name="title_activity_settings">Settings</string>
    <string name="DefaultMode">driving</string>
    <string name="tituloOpcionesMode">indicar modo de viaje</string>
    <string name="mode">mode</string>
    <string name="action_share">Share</string>
    <string name="SendButton">Enviar</string>

</resources>
